# dntk

./: .gitignore  .travis.yml  AGENTS.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  TODO.md  build.rs  dntk.go  release.sh  test2.txt  version.sh
.github/workflows/: ci.yml  release.yml
ci/: before_deploy.sh  before_script.sh  script.sh
pkg/: dntk.go
src/: dntk.go  lib.rs  main.rs  meta.rs
src/calc/: mod.rs
src/calc/util/: mod.rs
src/cursor/: cursor.go
src/dntker/: buffer.rs  dntker.rs  history.rs  mod.rs  prompt.rs  tests.rs
src/dntker/bc/: bc.rs  complex.rs  error.rs  execution.rs  expression.rs  formatting.rs  literals.rs  matrix.rs  mod.rs  parsing.rs  runtime.rs  tests.rs
src/dntker/util/: consts.rs  mod.rs  opts.rs
src/term/: bsd.rs  linux_gnu.rs  linux_musl.rs  linux_unknown.rs  mod.rs  osx.rs  windows.rs
src/util/: consts.rs  mod.rs
test/bc-1.07.1-win32-embedeo-02/share/info/: bc.info  dc.info  dir
tests/: e2e.rs  lib.rs
