[package]
name = "dntk"
version = "2.1.19"
authors = ["nnao45 <n4sekai5y@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Command line's multi-platform interactive calculator, GNU bc wrapper."
readme = "README.md"
homepage = "https://github.com/nnao45/dntk"
repository = "https://github.com/nnao45/dntk"
keywords = ["cli", "rust", "bc"]
categories = ["command-line-utilities"]

[dependencies]
libc = "0.2"
scopeguard = "1.0.0"
atty = "0.2"
clap = "2.20.3"
subprocess = "0.1.18"
ansi_term = "0.11"
structopt = "0.2"
lazy_static = "1.3.0"
assert_cmd = "0.11.1"
winapi = "0.3"

[dependencies.winconsole]
version = "0.10"
features = ["input", "serde", "window"]
