[package]
name = "dntk"
version = "3.0.2"
authors = ["nnao45 <n4sekai5y@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Command line's multi-platform interactive calculator, GNU bc wrapper."
readme = "README.md"
homepage = "https://github.com/nnao45/dntk"
repository = "https://github.com/nnao45/dntk"
keywords = ["cli", "rust", "bc"]
categories = ["command-line-utilities"]

[dependencies]
libc = "0.2"
scopeguard = "1.0.0"
atty = "0.2"
clap = { version = "4.5", features = ["derive"] }
ansi_term = "0.11"
lazy_static = "1.3.0"
assert_cmd = "0.11.1"
winapi = "0.3"
fasteval = "0.2"
rust_decimal = { version = "1.35", features = ["maths"] }
libm = "0.2"
rand = { version = "0.8", features = ["small_rng"] }

[dependencies.winconsole]
version = "0.10"
features = ["input", "serde", "window"]
