[package]
name = "dntk"
version = "3.0.18"
authors = ["nnao45 <n4sekai5y@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Command line's multi-platform interactive calculator, GNU bc wrapper."
readme = "README.md"
homepage = "https://github.com/nnao45/dntk"
repository = "https://github.com/nnao45/dntk"
keywords = ["cli", "rust", "bc"]
categories = ["command-line-utilities"]

[dependencies]
libc = "0.2"
scopeguard = "1.2"
clap = { version = "4.5", features = ["derive"] }
anstyle = "1.0"
owo-colors = "4.1"
lazy_static = "1.5"
assert_cmd = "2.0"
fasteval = "0.2"
dashu = { version = "0.4", features = ["num-traits_v02"] }
libm = "0.2"
num-traits = "0.2.19"
rand = { version = "0.8", features = ["small_rng"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "processenv", "errhandlingapi", "consoleapi"] }
winconsole = { version = "0.10", features = ["input", "serde", "window"] }
